package org.tp.modelo;

import javafx.scene.image.ImageView;

public interface Animable {
    ImageView[] getImagenesParaAnimacion();
}
