package org.tp.modelo;

public class Diamante extends Recolectable {
    //tendria sentido en un futuro si quisieramos agregar mas recolectables de distintos tipos y valores
}
