package org.tp.modelo;

public abstract class Recolectable { }
